# fieldnotes

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.fieldnotes/: INDEX.md
.fieldnotes/notes/: 0001-cli-entry-points.md  0002-sha-pinning.md  0003-brief-and-hooks.md  0004-line-range-pinning.md  0005-symbol-pinning.md  0006-line-range-pinning.md  0007-line-range-pinning.md
.github/workflows/: ci.yml
docs/: devto-fieldnotes.md
fieldnotes/: __init__.py  brief.py  cli.py  diffcmd.py  doctor.py  gaps.py  githook.py  index.py  models.py  search.py  store.py  symbols.py  verify.py
tests/: conftest.py  test_brief.py  test_cli.py  test_cli_v010_symbols.py  test_cli_v011_confirm.py  test_cli_v011_handoff.py  test_cli_v011_polish.py  test_cli_v02.py  test_cli_v03.py  test_cli_v04.py  test_cli_v05.py  test_cli_v071_pin_safety.py  test_cli_v08.py  test_cli_v081_hook_quoting.py  test_cli_v081_rebase.py  test_cli_v09_advisory.py  test_cli_v09_diff.py  test_cli_v09_nudge.py  test_cli_v09_update.py  test_doctor.py  test_gaps.py  test_githook.py  test_index.py  test_models.py  test_search.py  test_store.py  test_store_lookup.py  test_symbols.py  test_symbols_sql.py  test_symbols_ts.py  test_verify.py  test_verify_range.py  test_verify_rebase.py  test_verify_symbol.py
